--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "mongoose": "^5.10.10",
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "swagger-ui-express": "^4.1.2",
